Bug 1506047 - prevent status bar from wrapping to several lines causing jumping window size. r=Paenglab

--- a/mail/themes/linux/mail/messenger.css
+++ b/mail/themes/linux/mail/messenger.css
@@ -752,9 +752,6 @@ menulist[editable="true"] > .menulist-dropmarker {
 statusbarpanel,
 .statusbarpanel {
   -moz-appearance: none;
-  -moz-box-align: center;
-  -moz-box-pack: center;
-  padding: 0 4px;
 }
 
 .statusbar-resizerpanel {
